# kaitei_othello

./: .gitignore  kaitei_othello.sln
kaitei_othello/: CMakeLists.txt  MCTSearcher.cpp  MCTSearcher.hpp  Makefile  alhpazero_trainer.hpp  alphabeta_searcher.cpp  alphabeta_searcher.hpp  alphazero_settings.txt  alphazero_trainer.cpp  alphazero_trainer.hpp  array_map.hpp  base_trainer.cpp  base_trainer.hpp  bitboard.cpp  bitboard.hpp  bonanza_method_trainer.cpp  bonanza_method_trainer.hpp  book.hpp  calcScore.cpp  common.hpp  eval_elements.hpp  eval_params.hpp  game.cpp  game.hpp  hand.hpp  hash_table.cpp  hash_table.hpp  history.hpp  kaitei_othello.vcxproj  kaitei_othello.vcxproj.filters  learn_sync_log.txt  main.cpp  move.cpp  move.hpp  move_picker.cpp  move_picker.hpp  network.cpp  network.hpp  operate_params.hpp  piece.cpp  (+31 more)
